@@ -39,7 +39,7 @@ public class SequenceGlobalAlignment {
 		secondSequence = scanner.nextLine();
 
 		ALPHABET_LENGTH = scanner.nextInt();
-		rnaToAminoAcids = new Boolean(scanner.next());
+		rnaToAminoAcids = Boolean.valueOf(scanner.next());
 
 		costTable = new int[ALPHABET_LENGTH][ALPHABET_LENGTH];
 		similarityTable = new int[ALPHABET_LENGTH][ALPHABET_LENGTH];
@@ -67,11 +67,11 @@ public class SequenceGlobalAlignment {
 	}
 
 	private String convertSequence(String sequence) {
-		String convertedSequence = "";
+		StringBuilder convertedSequence = new StringBuilder();
 		for (int i = 0; i < sequence.length(); i += 3) {
-			convertedSequence = convertedSequence + AminoAcidsTypes.valueOf(sequence.substring(i, i + 3)).getAminoAcid();
+			convertedSequence.append(AminoAcidsTypes.valueOf(sequence.substring(i, i + 3)).getAminoAcid());
 		}
-		return convertedSequence;
+		return convertedSequence.toString();
 	}
 
 	public void countTable() {
@@ -96,8 +96,7 @@ public class SequenceGlobalAlignment {
 	}
 
 	protected int CostBetweenElements(String a, String b) {
-		int cost = costTable[alphabet.indexOf(a)][alphabet.indexOf(b)];
-		return cost;
+		return costTable[alphabet.indexOf(a)][alphabet.indexOf(b)];
 	}
 
 
@@ -139,11 +138,11 @@ public class SequenceGlobalAlignment {
 		int counter = 0;
 		while (continueCondition(list)) {
 			localResult = list.get(counter);
-			x = localResult.get(localResult.size() - 1).x;
-			y = localResult.get(localResult.size() - 1).y;
+			x = localResult.get(localResult.size() - 1).getX();
+			y = localResult.get(localResult.size() - 1).getY();
 			while (x != 0 && y != 0) {
 				int edgesCounter = 0;
-				if (table[x][y].isUpEdge()) {
+				if (table[x][y].isTopEdge()) {
 					actualPoint = new PointInTable(x, y - 1);
 					edgesCounter++;
 				}
@@ -171,10 +170,10 @@ public class SequenceGlobalAlignment {
 					}
 					edgesCounter++;
 				}
-				if (actualPoint.x == (x - 1) && actualPoint.y == (y - 1)) {
+				if (actualPoint.getX() == (x - 1) && actualPoint.getY() == (y - 1)) {
 					x--;
 					y--;
-				} else if (actualPoint.x == x && actualPoint.y == (y - 1)) {
+				} else if (actualPoint.getX() == x && actualPoint.getY() == (y - 1)) {
 					y--;
 				} else {
 					x--;
@@ -212,8 +211,8 @@ public class SequenceGlobalAlignment {
 			String firstOutput = "";
 			String secondOutput = "";
 			for (PointInTable point : list) {
-				actual_x = point.x;
-				actual_y = point.y;
+				actual_x = point.getX();
+				actual_y = point.getY();
 				if (actual_x != firstSequenceLength || actual_y != secondSequenceLength) {
 
 					if (recent_x == actual_x) {
@@ -273,20 +272,11 @@ public class SequenceGlobalAlignment {
 	private boolean continueCondition(ArrayList<ArrayList<PointInTable>> lists) {
 		if (lists.isEmpty()) return true;
 		for (ArrayList<PointInTable> list : lists) {
-			if (list.get(list.size() - 1).x != 0 && list.get(list.size() - 1).y != 0) {
+			if (list.get(list.size() - 1).getX() != 0 && list.get(list.size() - 1).getY() != 0) {
 				return true;
 			}
 		}
 		return false;
-	}
-
-	protected class PointInTable {
-		int x;
-		int y;
-		public PointInTable(int x, int y) {
-			this.x = x;
-			this.y = y;
-		}
 	}
 }
 
